--- a/isi_data_insights_d.cfg
+++ b/isi_data_insights_d.cfg
@@ -21,7 +21,7 @@ stats_processor_args: influx 8086 isi_data_insights
 # Use the optional True or False on the end to specify whether the cluster's
 # SSL certificate should be verified. If it is omitted then the default is
 # False (i.e. don't verify SSL cert).
-clusters: root:a@10.237.32.11 root:a@10.111.158.161
+clusters: username:password@node_ipaddress:False
 
 # Specifies the active list of stat groups to query, each stat group name
 # specified here should have a corresponding section in the config file.
