modified REAME and modified debug mode within .cfg file

--- a/isi_data_insights_d.cfg
+++ b/isi_data_insights_d.cfg
@@ -4,7 +4,7 @@
 # pid_file: /var/run/isi_data_insights_d.pid
 # log_file: /var/run/isi_data_insights_d.log
 # default log_level is INFO
-log_level: DEBUG
+#log_level: DEBUG
 stats_processor: influxdb_plugin
 # Use "auth" as the 4th arg in order to be prompted for the
 # InfluxDB username and password stats_processor_args, example:
