added node nfs smb node metrics to cfg file

--- a/isi_data_insights_d.cfg
+++ b/isi_data_insights_d.cfg
@@ -4,12 +4,12 @@
 # pid_file: /var/run/isi_data_insights_d.pid
 # log_file: /var/run/isi_data_insights_d.log
 # default log_level is INFO
-#log_level: DEBUG
+# log_level: DEBUG
 stats_processor: influxdb_plugin
 # Use "auth" as the 4th arg in order to be prompted for the
 # InfluxDB username and password stats_processor_args, example:
 # localhost 8086 isi_data_insights auth
-stats_processor_args: influx 8086 isi_data_insights
+stats_processor_args: localhost 8086 isi_data_insights
 
 # clusters in this section are queried for all stat groups
 # clusters: [username1:password1@]<ip-or-host-address1>[:True|False]
@@ -21,7 +21,7 @@ stats_processor_args: influx 8086 isi_data_insights
 # Use the optional True or False on the end to specify whether the cluster's
 # SSL certificate should be verified. If it is omitted then the default is
 # False (i.e. don't verify SSL cert).
-clusters: username:password@node_ipaddress:False
+clusters: root:a@10.237.32.11:False root:a@10.111.158.161:False 
 
 # Specifies the active list of stat groups to query, each stat group name
 # specified here should have a corresponding section in the config file.
@@ -38,6 +38,8 @@ active_stat_groups: cluster_cpu_stats
     cluster_proto_stats
     cache_stats
     heat_total_stats
+    node_proto_stats
+    node_cpu_stats
 
 # The min_update_interval_override param provides ability to override the
 # minimum interval that the daemon will query for a set of stats. The purpose
@@ -58,6 +60,18 @@ stats: cluster.cpu.sys.avg
     cluster.cpu.user.avg
     cluster.cpu.idle.avg
     cluster.cpu.intr.avg
+
+[node_cpu_stats]
+update_interval: *
+stats: node.cpu.sys.avg
+    node.cpu.user.avg
+    node.cpu.idle.avg
+    node.cpu.intr.avg
+
+[node_proto_stats]
+update_interval: *
+stats: node.protostats.nfs
+    node.protostats.smb2
 
 [cluster_network_traffic_stats]
 update_interval: *
