--- a/isi_data_insights_d.cfg
+++ b/isi_data_insights_d.cfg
@@ -9,7 +9,7 @@ stats_processor: influxdb_plugin
 # Use "auth" as the 4th arg in order to be prompted for the
 # InfluxDB username and password stats_processor_args, example:
 # localhost 8086 isi_data_insights auth
-stats_processor_args: localhost 8086 isi_data_insights
+stats_processor_args: influxdb 8086 isi_data_insights
 
 # clusters in this section are queried for all stat groups
 # clusters: [username1:password1@]<ip-or-host-address1>[:True|False]
@@ -21,7 +21,7 @@ stats_processor_args: localhost 8086 isi_data_insights
 # Use the optional True or False on the end to specify whether the cluster's
 # SSL certificate should be verified. If it is omitted then the default is
 # False (i.e. don't verify SSL cert).
-clusters: root:a@10.237.32.11:False root:a@10.111.158.161:False 
+clusters: root:a@10.237.32.11:False 
 
 # Specifies the active list of stat groups to query, each stat group name
 # specified here should have a corresponding section in the config file.
