Updated for docker provisioning

--- a/isi_data_insights_d.cfg
+++ b/isi_data_insights_d.cfg
@@ -21,7 +21,7 @@ stats_processor_args: localhost 8086 isi_data_insights
 # Use the optional True or False on the end to specify whether the cluster's
 # SSL certificate should be verified. If it is omitted then the default is
 # False (i.e. don't verify SSL cert).
-clusters: 
+clusters: DataInsights:a@10.237.33.122:False
 
 # Specifies the active list of stat groups to query, each stat group name
 # specified here should have a corresponding section in the config file.
@@ -115,7 +115,7 @@ update_interval: *
 stats: cluster.health
   cluster.node.count.all
   cluster.node.count.down
- 
+
 [ifs_space_stats]
 update_interval: *
 stats: ifs.bytes.avail
@@ -132,7 +132,7 @@ stats: ifs.bytes.in.rate
   ifs.bytes.out.rate
   ifs.ops.in.rate
   ifs.ops.out.rate
- 
+
 [node_load_stats]
 update_interval: *
 stats: node.cpu.throttling
@@ -143,7 +143,7 @@ stats: node.cpu.throttling
   node.memory.free
   node.memory.cache
   node.open.files
- 
+
 [node_disk_stats]
 update_interval: *
 stats: node.disk.bytes.out.rate.avg
@@ -251,7 +251,7 @@ stats: node.ifs.bytes.deleted
   node.ifs.bytes.out.rate.max
 
 [node_operation_stats]
-update_interval: 60  
+update_interval: 60
 stats: node.ifs.files.created
   node.ifs.files.removed
   node.ifs.num.lookups
@@ -262,7 +262,7 @@ stats: node.ifs.files.created
   node.ifs.ops.out
   node.ifs.ops.in.rate
   node.ifs.ops.out.rate
- 
+
 # These stats are not currently active by default. They are here to serve as an example of how to use the
 # derived stats functionality. See the comments below for more details.
 [concurrency_stats]
